--- a/2023-1/beamer/C05_md1.tex
+++ b/2023-1/beamer/C05_md1.tex
@@ -1,7 +1,7 @@
-\documentclass{beamer} 
-%\documentclass[handout]{beamer} % sin pausas
+%\documentclass{beamer} 
+\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS}
-\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 \usepackage{etex}
 \usepackage{t1enc}
@@ -142,7 +142,7 @@
         Debemos probar que si $k \ge 1$, 
         \vskip 0.4cm 
         $$
-        \sum_{i=0}^{k} i^3 = \frac{k^2(k+1)^2}{4} \;\; \text{ (HI) }\quad \Rightarrow \quad    \sum_{i=0}^{k+1} i^3 =\frac{(k+1)^2(k+2)^2}{4}.
+        \sum_{i=1}^{k} i^3 = \frac{k^2(k+1)^2}{4} \;\; \text{ (HI) }\quad \Rightarrow \quad    \sum_{i=0}^{k+1} i^3 =\frac{(k+1)^2(k+2)^2}{4}.
         $$
 
     
@@ -154,7 +154,7 @@
     \frametitle{}
     
     \begin{tabular}{lllll}
-        $\displaystyle\sum_{i=0}^{k+1} i^3$ &$=$& $\displaystyle\sum_{i=0}^{k} i^3 + (k+1)^3$ &\qquad &$\text{(por la definición recursiva de $\sum$ )}$ \\[0.6cm]
+        $\displaystyle\sum_{i=1}^{k+1} i^3$ &$=$& $\displaystyle\sum_{i=1}^{k} i^3 + (k+1)^3$ &\qquad &$\text{(por la definición recursiva de $\sum$ )}$ \\[0.6cm]
     &$=$& $\displaystyle\frac{k^2(k+1)^2}{4}+(k+1)^3$ &\quad &$\text{(por hipótesis inductiva)}$ \\[0.6cm]
     &$=$& $\displaystyle(k+1)^2(\frac{k^2}{4}+(k+1)))$ &\quad &$\text{($(k+1)^2$ factor común)}$ \\[0.6cm]
     &$=$& $\displaystyle(k+1)^2\frac{(k^2+4k+4)}{4}.$&\quad &\\[0.6cm]
@@ -562,6 +562,110 @@ Remarcamos que para aplicar el principio de adición es necesario que los evento
     \vskip .2cm
     
 \end{frame}
+
+
+\begin{frame}\frametitle{Selecciones ordenadas con repetición}
+
+
+    {\color{blue} Ejemplo}
+    \vskip .2cm
+    
+    Sea  $X = \{ 1, 2, 3 \}$.
+    \vskip .2cm
+    ¿De cuántas formas se pueden elegir dos de estos números en forma ordenada?
+        \vskip .2cm\pause
+    {\bf Notación:} si elegimos $a$ y $b$ en forma ordenada, denotamos $ab$. 
+    \vskip .2cm
+    Entonces, las posibilidades son 
+        \begin{align*}
+        &11&\quad &12&\quad &13 \\
+        &21&\quad &22&\quad &23\\
+        &31&\quad &32&\quad &33
+        \end{align*}
+        
+    \vskip .1cm \pause
+        Es decir, hay $9 = 3^2$ formas posibles. \pause
+        
+    
+    
+    \end{frame}
+    
+    \begin{frame}    
+    
+        
+    Avancemos un poco más y ahora elijamos en forma ordenada $3$ elementos de  ${1,2,3}$, es claro que estas elecciones son
+    \begin{align*}
+    &1 1 1&\quad &211&\quad &311 \\
+    &1 1 2&\quad & 212&\quad & 312\\
+    &1 1 3&\quad & 213&\quad & 313\\
+    &1 2 1&\quad & 221&\quad & 321\\
+    &1 2 2&\quad & 222&\quad & 322\\
+    &1 2 3&\quad & 223&\quad & 323\\
+    &1 3 1&\quad & 231&\quad & 331\\
+    &1 3 2&\quad & 232&\quad & 332\\
+    &1 3 3&\quad & 233&\quad & 333.
+    \end{align*}
+    El total de elecciones posibles $27 = 3^3$. 
+    
+    
+    
+    
+    \end{frame}
+    
+    \begin{frame}    
+        
+    
+    Un diagrama arbolado ayuda a pensar. \pause
+    \begin{center}
+        \includegraphics[scale=0.45]{images/arbol_pos.jpg}
+    \end{center}
+    
+    %\vskip 8cm
+    \vskip .2cm ¿Cómo justificamos esto? \pause Por el principio de multiplicación
+    \end{frame}
+    
+    \begin{frame}    
+        
+        De los dos ejemplos anteriores se podría inferir que hay $3^4$ formas posibles de elegir en forma ordenada $4$ elementos del conjunto $1$, $2$, $3$. También, que cuando elijamos $5$ habrá $3^5$ posibilidades y así sucesivamente para enteros más grandes. 
+    
+        \pause 
+    
+        \vskip .2cm ¿Cómo justificamos esto? \pause     Por el principio de multiplicación
+    
+        \pause 
+    
+        \vskip .2cm Hemos visto en las página anteriores que hay $3^3$ formas posibles de elegir $3$ números entre $1$, $2$, $3$.
+    
+        \vskip .2cm Ahora,  para elegir el cuarto número hay $3$ posibilidades, por lo tanto, por el principio de multiplicación, el número de posibilidades  con cuatro elecciones es
+        \begin{equation*}
+            3^3 \times 3 = 3^4.
+        \end{equation*}
+        \end{frame}
+    
+    \begin{frame}    
+    
+        
+    El razonamiento anterior  se puede extender:
+    
+    %\begin{proposicion}
+    \vskip .3cm
+    {\color{blue} Proposición}
+    \vskip .2cm
+        {\it  Sean  $m,n \in \mathbb N$. Hay   $n^m$ formas posibles de elegir ordenadamente $m$ elementos de un conjunto de $n$ elementos.}
+    %\end{proposicion}
+    \vskip .5cm \pause
+    {\color{blue} Idea de la prueba.} \pause
+    \vskip .2cm
+    %\begin{proof}[Idea de la prueba]
+        La prueba de esta proposición se basa en aplicar el principio de multiplicación $m-1$ veces, 
+        \vskip .2cm
+        A nivel formal,  debemos hacer inducción sobre $m$ y usar el principio de multiplicación en el paso inductivo. 
+    
+        \qed
+    %\end{proof}
+    
+    \end{frame}
+    
 
 \end{document}
 
