--- a/2023-1/beamer/C06_md1.tex
+++ b/2023-1/beamer/C06_md1.tex
@@ -1,6 +1,6 @@
 \documentclass{beamer} 
 %\documentclass[handout]{beamer} % sin pausas
-\usetheme{CambridgeUS}
+\usetheme{CambridgeUS} %
 \setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 
