--- a/2023-1/beamer/C06_md1.tex
+++ b/2023-1/beamer/C06_md1.tex
@@ -1,7 +1,7 @@
-\documentclass{beamer} 
-%\documentclass[handout]{beamer} % sin pausas
+%\documentclass{beamer} 
+\documentclass[handout]{beamer} % sin pausas
 \usetheme{CambridgeUS} %
-\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
+%\setbeamertemplate{background}[grid][step=8 ] % cuadriculado
 
 
 \usepackage{etex}
@@ -414,7 +414,9 @@ $$
     
     ¿De cuántas formas se pueden distribuir $3$ pasajeros? 
     
-    Lo que se está preguntando es cuantas posibles distribuciones de $3$  asientos existen (no importa quien se sienta  en cada asiento). 
+    \vskip .2cm
+
+    Lo que se está preguntando es de cuantas maneras se pueden distribuir 3 pasajeros en un colectivo con 9 asientos vacíos.
     
     
     \vskip .2cm\pause
